starlark_syntax/src/syntax/grammar_tests/decorator_lambda_disabled.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
@(lambda x: x)
def foo():
  pass

Error:
error: `lambda` is not allowed in this dialect
 --> decorator_lambda_disabled:1:3
  |
1 | @(lambda x: x)
  |   ^^^^^^^^^^^
  |
